# deployment

./: .gitignore  README.md  custom-values.yaml  flake.nix  secrets-sample.yaml
.github/workflows/: docsite-ci.yaml  helm-ci.yaml  release-platform-package.yaml
charts/: .gitignore  README.md
charts/auth-service/: Chart.yaml  README.md  values-auth0-with-service-accounts.yaml  values-auth0.yaml  values-keycloak.yaml  values.yaml
charts/auth0-bootstrap/: Chart.yaml  README.md  values.yaml
charts/entra-bootstrap/: Chart.yaml  README.md  values.yaml
charts/eqty-pdfgen/: Chart.yaml  README.md  values.yaml
charts/governance-ops/: Chart.yaml  README.md  values.yaml
charts/governance-platform/: Chart.yaml  README.md  secrets-sample.yaml  values.yaml
charts/governance-service/: Chart.yaml  README.md  values.yaml
docs/: deployment-guide-entra.md  deployment-guide-keycloak.md
docs-site/: README.md
govctl/: .gitignore  README.md  package.nix  pyproject.toml
govctl/govctl/cli/: display.py  main.py  prompts.py
govctl/govctl/cli/commands/: init.py
govctl/govctl/core/: models.py
govctl/govctl/generators/: auth0_bootstrap.py  bootstrap.py  entra_bootstrap.py  keycloak_bootstrap.py  secrets.py  values.py
govctl/govctl/generators/sections/: auth0.py  auth_service.py  entra.py  eqty_pdfgen.py  governance_service.py  governance_studio.py  integrity_service.py  keycloak.py  postgresql.py
govctl/govctl/utils/: naming.py  output.py  validate.py  yaml.py
schemas/: release-manifest.schema.json
scripts/: README.md  cert-issuer.sh  nginx.sh
(+214 files in other folders)
