[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govctl"
version = "0.1.0"
description = "CLI tool for generating Governance Platform Helm values"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "EQTYLab" }
]
dependencies = [
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
govctl = "govctl.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["govctl"]
